# Does_LLM_Memory_Patterned_Phone_Number_Easier

./: .gitignore  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  config.py  pyproject.toml  run_experiment.py  实验设计.md
Qwen3-1___7B/: .mdl  .msc
examples/: example_usage.py
results/: training_losses.json
src/: __init__.py  data_generator.py  trainer.py  visualizer.py
